# texxd

./: .gitignore  Makefile  README.md  pyproject.toml
src/texthed/: __init__.py  app.py  hex_editor.py  hex_file.py  hex_view.py  highlighter.py  log.py
src/texthed/columns/: __init__.py  address.py  ascii.py  column.py  hex.py
src/texthed/cursors/: ascii_cursor.py  cursor.py
src/texthed/highlighters/: __init__.py  newline.py
src/texxd/: __init__.py  app.py  hex_view.py
src/texxd/cursors/: cursor.py
tests/: test_columns.py  test_hex_file.py  test_navigation.py
